--- a/app/style/style.css
+++ b/app/style/style.css
@@ -52,7 +52,12 @@ main {
     display: flex;
     padding: 0; }
     main .generation-info .row .image-container {
-      width: 70%; }
+      width: 70%;
+      background-repeat: no-repeat !important;
+      background-size: cover !important;
+      display: flex;
+      align-items: center;
+      justify-content: space-around; }
     main .generation-info .row img {
       width: 100%;
       height: 100%; }
