--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -89,14 +89,35 @@ main {
         flex-direction: column;
         width: 30%;
         .title-text {
+          position: relative;
           .title-text__icon {
             padding-top: 65px;
           }
           p {
             text-align: left;
+
+            position: relative;
             padding: 65px;
             padding-top: 0;
             margin-bottom: 53px;
+            &:after {
+              content: '';
+              position: absolute;
+              left: 45%;
+              bottom: 0px;
+              width: 50px;
+              height: 3px;
+              background: #d7d7d7;
+
+              border-width: 0 10px;
+            }
+          }
+          &:after {
+            content: '';
+            position: absolute;
+            left: 45%; bottom: -39px;
+            border: 20px solid transparent;
+            border-top: 20px solid white;
           }
         }
       }
