--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -74,8 +74,8 @@ main {
       padding: 0;
       .image-container {
         width: 70%;
-        background-repeat: no-repeat!important;
-        background-size: cover!important;
+        background-repeat: no-repeat !important;
+        background-size: cover !important;
         display: flex;
         align-items: center;
         justify-content: space-around;
@@ -115,7 +115,8 @@ main {
           &:after {
             content: '';
             position: absolute;
-            left: 45%; bottom: -39px;
+            left: 45%;
+            bottom: -39px;
             border: 20px solid transparent;
             border-top: 20px solid white;
           }
@@ -136,14 +137,14 @@ main {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    .carousel-indicators li{
+    .carousel-indicators li {
       background-color: white;
       width: 10px;
       height: 10px;
       border-radius: 50%;
       border: 1px solid #a9afb3;
     }
-    .carousel-indicators .active{
+    .carousel-indicators .active {
       background-color: #a9afb3;
     }
     .title-text {
@@ -168,60 +169,57 @@ main {
   }
   .gallery {
     width: 100%;
-    .container-fluid{
-      display: flex;
+    display: flex;
+    padding: 0;
+    .col-4 {
       padding: 0;
-      .col-4{
-        padding: 0;
-        &:nth-child(1) .gallery__item{
-         height: 266px;
-        }
-        &:nth-child(2) .gallery__item{
-          height: 540px;
-        }
-      }
-    }
-    .gallery__item{
-      width: 100%;
-      height: 270px;
-      display: flex;
-      align-items: stretch;
-      justify-content: stretch;
-      a {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        background-image: none;
-        justify-content: center;
-        align-items: center;
-        flex-grow: 1;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: #fff;
-        font-size: 18px;
-        font-weight: bold;
-        opacity: 0;
-        background-color: rgba(100, 194, 158, 0.8);
-        &:hover{
-          opacity: 1;
-        }
-        &:after {
-          position: absolute;
-          content: '';
-
-          left: 0;
-          top: 0;
-          right: 0;
-          bottom: 0;
-          opacity: 0;
-          transition: opacity .3s ease;
-          z-index: -1;
-        }
+      width: -webkit-fill-available;
+      max-width: 33.333333%;
+      .gallery__item {
+        height: 267px;
       }
     }
   }
-  .discover {
+  .gallery__item {
+    width: 100%;
+    height: 265px;
+    display: flex;
+    align-items: stretch;
+    justify-content: stretch;
+    a {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      background-image: none;
+      justify-content: center;
+      align-items: center;
+      flex-grow: 1;
+      text-decoration: none;
+      text-transform: uppercase;
+      color: #fff;
+      font-size: 18px;
+      font-weight: bold;
+      opacity: 0;
+      background-color: rgba(100, 194, 158, 0.8);
+      &:hover {
+        opacity: 1;
+      }
+      &:after {
+        position: absolute;
+        content: '';
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0;
+        transition: opacity .3s ease;
+        z-index: -1;
+      }
 
+    }
+  }
+
+  .discover {
     align-items: center;
     justify-content: center;
     min-height: 200px;
@@ -236,6 +234,7 @@ main {
       text-transform: uppercase;
     }
   }
+
   .contact-with-us {
     font-size: 24px;
     color: #848789;
@@ -261,6 +260,7 @@ main {
       }
     }
   }
+
 }
 
 footer {
@@ -280,7 +280,10 @@ footer {
     }
     .social-icon {
       img {
-        padding-left: 15px;
+        padding-right: 15px;
+        &:last-child {
+          padding: 0;
+        }
       }
     }
     .author {
@@ -293,5 +296,27 @@ footer {
       }
     }
   }
+}
 
+@media screen and (max-width: 1440px) {
+  .container {
+    padding: 117px 75px !important;
+  }
+  main {
+    .contact {
+      .title-text {
+        padding: 143px 125px;
+      }
+    }
+    .gallery {
+      display: flex;
+      .col-4 {
+        width: -webkit-fill-available;
+        max-width: 33.333333%;
+        .gallery__item {
+
+        }
+      }
+    }
+  }
 }
