--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -6,6 +6,43 @@ html, body {
   padding: 0;
 }
 
+.swiper-container {
+  width: 600px;
+  height: 300px;
+}
+
+/*********************************************/
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.swiper-pagination-bullet{
+  background-color:#f7f7f7!important;
+  border: 2px solid #a9afb3!important;
+}
+.swiper-pagination-bullet-active{
+  background-color: #a9afb3!important;
+}
+/*********************************************/
 .flex-column {
   display: flex;
   flex-direction: column;
@@ -34,11 +71,14 @@ header {
       font-weight: bold;
       font-size: 13px;
       &__item {
+        padding: 34px;
         a {
           display: block;
           color: #4d4959;
           text-decoration: none;
-          padding: 34px;
+          &:hover {
+            color: #64c29e;
+          }
         }
       }
     }
@@ -250,6 +290,9 @@ main {
         font-size: 15px;
         color: #c8c8c8;
         border: 2px solid #d3d7d9;
+        &:focus{
+          border: 2px solid #64c29e;
+        }
       }
       button {
         font-size: 17px;
@@ -257,6 +300,9 @@ main {
         color: white;
         background: #64c29e;
         border: none;
+        &:hover{
+          background-color: #ff5654;
+        }
       }
     }
   }
