--- a/app/style/style.css
+++ b/app/style/style.css
@@ -285,3 +285,15 @@ footer .container {
     main .gallery .col-4 {
       width: -webkit-fill-available;
       max-width: 33.333333%; } }
+
+@media screen and (max-width: 768px) {
+  main .generation-info .image-container {
+    width: 50% !important; }
+  main .generation-info .flex-column {
+    width: 50%; } }
+
+@media screen and (max-width: 600px) {
+  .new-generation .container .title-text p {
+    line-height: 48px; }
+  .generation-info .row .flex-column .title-text p {
+    padding: 45px !important; } }
