--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -377,24 +377,25 @@ footer {
       .col-4 {
         width: -webkit-fill-available;
         max-width: 33.333333%;
-        .gallery__item {
-
-        }
       }
     }
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   main {
     .generation-info {
+      .row{
+        overflow: hidden;
         .image-container {
           width: 50%!important;
         }
         .flex-column {
-          width: 50%;
+          width: 50%!important;
 
         }
+      }
+
       }
     }
 
@@ -406,6 +407,7 @@ footer {
       .title-text {
         p {
           line-height: 48px;
+          font-size: 14px;
         }
       }
     }
