--- a/app/style/style.css
+++ b/app/style/style.css
@@ -52,26 +52,29 @@ html, body {
 header {
   background: url("../images/bg.png") no-repeat center;
   background-size: cover;
-  min-height: 800px; }
-  header nav .menu {
+  min-height: 800px;
+  position: relative; }
+  header .menu {
     width: 100%;
     padding: 0;
     padding-top: 40px;
     margin: 0;
     display: flex;
     justify-content: center;
-    list-style: none;
     font-family: "Lato", sans-serif;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 13px; }
-    header nav .menu__item {
+    header .menu ul li {
+      list-style: none; }
+    header .menu__item {
       padding: 34px; }
-      header nav .menu__item a {
+      header .menu__item a {
         display: block;
+        width: max-content;
         color: #4d4959;
         text-decoration: none; }
-        header nav .menu__item a:hover {
+        header .menu__item a:hover {
           color: #64c29e;
           cursor: pointer; }
 
@@ -286,17 +289,141 @@ footer .container {
       width: -webkit-fill-available;
       max-width: 33.333333%; } }
 
-@media screen and (min-width: 768px) {
-  main .generation-info .row {
-    overflow: hidden; }
-    main .generation-info .row .image-container {
-      width: 50% !important; }
-    main .generation-info .row .flex-column {
-      width: 50% !important; } }
-
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
+  header ul {
+    display: flex; }
   .new-generation .container .title-text p {
     line-height: 48px;
     font-size: 14px; }
-  .generation-info .row .flex-column .title-text p {
-    padding: 45px !important; } }
+  .generation-info .row {
+    overflow: hidden; }
+    .generation-info .row .flex-column .title-text p {
+      padding: 45px !important; }
+    .generation-info .row .image-container {
+      width: 50% !important; }
+    .generation-info .row .flex-column {
+      width: 50% !important; } }
+
+@media screen and (max-width: 600px) {
+  .menu__mobile {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color: #fff; }
+    .menu__mobile svg {
+      display: none; }
+  .icon {
+    position: absolute;
+    top: 5%;
+    right: -20px;
+    transform: translate(-50%, -50%);
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    z-index: 2; }
+  .burger-nav {
+    width: 50px;
+    height: 6px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: .5s;
+    background: #64c29e; }
+  .burger-nav:before, .burger-nav:after {
+    content: '';
+    width: 50px;
+    height: 6px;
+    position: absolute;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: .5s;
+    background: #64c29e; }
+  .burger-nav:before {
+    top: -16px;
+    background: #64c29e; }
+  .icon.active .burger-nav {
+    background: rgba(0, 0, 0, 0);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
+    transition: all 1s ease; }
+  .icon.active .burger-nav:before {
+    top: 0;
+    transform: rotate(45deg); }
+  .icon.active .burger-nav:after {
+    top: 0;
+    transform: rotate(135deg); }
+  .menu ul {
+    height: 0;
+    overflow: hidden;
+    background: #fff; }
+  .menu ul.open {
+    margin: 0;
+    height: auto; }
+  .menu ul li {
+    text-align: left;
+    width: 100%; }
+  .menu ul li a {
+    color: #64c29e; }
+  .menu a:hover {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #64c29e;
+    transform: scaleX(1); }
+  .menu a:hover:after {
+    width: 100%; }
+  .menu a:after {
+    display: block;
+    content: "";
+    height: 2px;
+    width: 0;
+    background-color: #64c29e;
+    transition: all .3s ease-in-out; }
+  .menu ul.open {
+    transition: all .4s ease; }
+  .menu ul.open {
+    height: auto;
+    width: 100vw;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    z-index: 1; }
+  /***************************************/
+  .contact-with-us__input {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .contact-with-us__input button {
+      margin-top: 20px;
+      width: 100%; }
+  footer .container {
+    display: flex;
+    flex-direction: column; }
+    footer .container__item {
+      margin-bottom: 30px; }
+      footer .container__item:last-child {
+        margin-bottom: 0;
+        display: flex;
+        justify-content: space-around; }
+    footer .container .social-icon {
+      display: flex;
+      justify-content: space-around; } }
+
+@media screen and (min-width: 320px) {
+  .generation-info .row {
+    flex-direction: column; }
+    .generation-info .row .image-container, .generation-info .row .flex-column {
+      width: 100% !important; }
+  .generation-info .row:last-child {
+    flex-direction: column; }
+    .generation-info .row:last-child .image-container {
+      width: 100% !important;
+      padding: 0px;
+      height: 200px; }
+    .generation-info .row:last-child .flex-column {
+      width: 100% !important; }
+  .gallery {
+    text-align: center; }
+    .gallery svg {
+      padding-left: 15px; } }
