--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -547,7 +547,7 @@ footer {
     flex-direction: column;
     z-index: 1;
   }
-  /***************************************/
+  /**************************************/
   .contact-with-us {
     &__input {
       display: flex;
