--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -390,28 +390,7 @@ footer {
   }
 }
 
-@media screen and (min-width: 768px) {
-
-}
-
-@media screen and (min-width: 600px) {
-  header {
-    ul {
-      display: flex;
-    }
-  }
-  .new-generation {
-    .container {
-      .title-text {
-        p {
-          line-height: 48px;
-          font-size: 14px;
-        }
-      }
-    }
-
-  }
-
+@media screen and (max-width: 1024px) {
   .generation-info {
     .row {
       overflow: hidden;
@@ -430,6 +409,55 @@ footer {
 
       }
     }
+  }
+}
+@media screen and (max-width: 768px){
+  .contact-with-us {
+    &__input {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      button {
+        margin-top: 20px;
+        width: 100%;
+      }
+    }
+  }
+  footer {
+    .container {
+      display: flex;
+      flex-direction: column;
+      &__item {
+        margin-bottom: 30px;
+        &:last-child {
+          margin-bottom: 0;
+          display: flex;
+          justify-content: space-around;
+        }
+      }
+      .social-icon {
+        display: flex;
+        justify-content: space-around;
+      }
+    }
+  }
+}
+@media screen and (min-width: 600px) {
+  header {
+    ul {
+      display: flex;
+    }
+  }
+  .new-generation {
+    .container {
+      .title-text {
+        p {
+          line-height: 48px;
+          font-size: 14px;
+        }
+      }
+    }
+
   }
 }
 
@@ -548,39 +576,6 @@ footer {
     z-index: 1;
   }
   /**************************************/
-  .contact-with-us {
-    &__input {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      button {
-        margin-top: 20px;
-        width: 100%;
-      }
-    }
-  }
-  footer {
-    .container {
-      display: flex;
-      flex-direction: column;
-      &__item {
-        margin-bottom: 30px;
-        &:last-child {
-          margin-bottom: 0;
-          display: flex;
-          justify-content: space-around;
-        }
-      }
-      .social-icon {
-        display: flex;
-        justify-content: space-around;
-      }
-    }
-  }
-}
-
-@media screen and (min-width: 320px) {
-
   .generation-info {
     .row {
       flex-direction: column;
@@ -601,6 +596,13 @@ footer {
       }
     }
   }
+
+
+}
+
+@media screen and (min-width: 320px) {
+
+
   .gallery {
     text-align: center;
     svg {
