--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -60,43 +60,42 @@ html, body {
   flex-direction: row;
 }
 
-header {
+.main-screen {
   background: url("../images/bg.png") no-repeat center;
   background-size: cover;
   min-height: 800px;
+  height: 100vh;
   position: relative;
-  .icon {
-
-  }
   .menu {
-    width: 100%;
-    padding: 0;
     padding-top: 40px;
-    margin: 0;
-    display: flex;
-    justify-content: center;
 
-    font-family: $Lato;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 13px;
-    ul li {
-      list-style: none;
-    }
-    &__item {
-
-      padding: 34px;
-      a {
-        display: block;
-        width: max-content;
-        color: #4d4959;
-        text-decoration: none;
-        &:hover {
-          color: #64c29e;
-          cursor: pointer;
+    .menu__mobile {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: $Lato;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 13px;
+      .menu__item {
+        padding: 0 34px;
+        a {
+          display: block;
+          width: max-content;
+          color: #4d4959;
+          text-decoration: none;
+          &:hover {
+            color: #64c29e;
+            cursor: pointer;
+            transition: color 300ms ease-out;
+          }
         }
       }
     }
+
   }
 
 }
@@ -118,10 +117,22 @@ main {
     }
   }
   .new-generation {
-    .container {
-      padding: 117px 279px;
+    padding: 117px 279px;
+    h3 {
+      font-size: 18px;
+      letter-spacing: 4px;
+      color: #353738;
+      font-family: $Lato;
+      font-weight: bold;
+      text-align: center;
     }
-
+    p {
+      font-size: 18px;
+      line-height: 34px;
+      color: #848789;
+      font-family: $Lato;
+      text-align: center;
+    }
   }
   .generation-info {
     .row {
@@ -151,8 +162,11 @@ main {
             padding-top: 65px;
           }
           p {
+            font-size: 18px;
+            line-height: 34px;
+            color: #848789;
+            font-family: $Lato;
             text-align: left;
-
             position: relative;
             padding: 65px;
             padding-top: 0;
@@ -165,7 +179,6 @@ main {
               width: 50px;
               height: 3px;
               background: #d7d7d7;
-
               border-width: 0 10px;
             }
           }
@@ -261,6 +274,7 @@ main {
       &:hover {
         opacity: 1;
         cursor: pointer;
+        transition: all 400ms ease;
       }
       &:after {
         position: absolute;
@@ -270,7 +284,7 @@ main {
         right: 0;
         bottom: 0;
         opacity: 0;
-        transition: opacity .3s ease;
+        // transition: opacity 300ms ease;
         z-index: -1;
       }
 
@@ -294,6 +308,7 @@ main {
         cursor: pointer;
         background-color: rgb(100, 194, 158);
         border: 2px solid rgb(100, 194, 158);
+        transition: all 400ms ease-out;
       }
     }
 
@@ -327,6 +342,7 @@ main {
         &:hover {
           cursor: pointer;
           background-color: #ff5654;
+          transition: all 400ms ease-out;
         }
       }
     }
@@ -335,37 +351,39 @@ main {
 }
 
 footer {
-  .container {
+  display: flex;
+  justify-content: space-around;
+  padding: 100px 250px;
+  &__item {
+    font-size: 16px;
+    .street, .city {
+      color: #848789;
+      padding-bottom: 7px;
+    }
+    .company {
+      padding-bottom: 7px;
+    }
+  }
+  .social-icon {
+    a {
+      display: inline-block;
+      padding-right: 15px;
+      img:hover{
+        opacity: .5;
+        transition: all 400ms ease;
+      }
+      &:last-child {
+        padding: 0;
+      }
+    }
+  }
+  .author {
     display: flex;
-    justify-content: space-around;
-    padding: 100px 250px;
-    &__item {
-      font-size: 16px;
-      .street, .city {
-        color: #848789;
-        padding-bottom: 7px;
-      }
-      .company {
-        padding-bottom: 7px;
-      }
+    p {
+      color: #848789;
     }
-    .social-icon {
-      a {
-        display: inline-block;
-        padding-right: 15px;
-        &:last-child {
-          padding: 0;
-        }
-      }
-    }
-    .author {
-      display: flex;
-      p {
-        color: #848789;
-      }
-      svg {
-        padding: 10px;
-      }
+    svg {
+      padding: 10px;
     }
   }
 }
@@ -411,7 +429,8 @@ footer {
     }
   }
 }
-@media screen and (max-width: 768px){
+
+@media screen and (max-width: 768px) {
   .contact-with-us {
     &__input {
       display: flex;
@@ -424,7 +443,6 @@ footer {
     }
   }
   footer {
-    .container {
       display: flex;
       flex-direction: column;
       &__item {
@@ -440,25 +458,20 @@ footer {
         justify-content: space-around;
       }
     }
-  }
 }
+
 @media screen and (min-width: 600px) {
-  header {
-    ul {
-      display: flex;
-    }
-  }
-  .new-generation {
-    .container {
-      .title-text {
-        p {
-          line-height: 48px;
-          font-size: 14px;
-        }
+  main {
+    .main-screen {
+      ul {
+        display: flex;
       }
     }
-
+    .new-generation {
+      padding: 100px;
+    }
   }
+
 }
 
 @media screen and(max-width: 600px) {
@@ -467,11 +480,15 @@ footer {
     flex-direction: column;
     text-align: center;
     background-color: #fff;
+
+    .menu__item {
+      padding: 34px;
+    }
     svg {
       display: none;
     }
   }
-  .icon {
+  .main-screen__hamg-menu {
     position: absolute;
     top: 5%;
     right: -20px;
@@ -509,18 +526,18 @@ footer {
     background: #64c29e;
   }
 
-  .icon.active .burger-nav {
+  .main-screen__hamg-menu.active .burger-nav {
     background: rgba(0, 0, 0, 0);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
     transition: all 1s ease;
   }
 
-  .icon.active .burger-nav:before {
+  .main-screen__hamg-menu.active .burger-nav:before {
     top: 0;
     transform: rotate(45deg);
   }
 
-  .icon.active .burger-nav:after {
+  .main-screen__hamg-menu.active .burger-nav:after {
     top: 0;
     transform: rotate(135deg);
   }
@@ -534,6 +551,7 @@ footer {
   .menu ul.open {
     margin: 0;
     height: auto;
+    transition: all 400ms ease-out;
   }
 
   .menu ul li {
@@ -597,11 +615,9 @@ footer {
     }
   }
 
-
 }
 
 @media screen and (min-width: 320px) {
-
 
   .gallery {
     text-align: center;
