--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -149,8 +149,8 @@ main {
 
       }
       img {
-        width: 100%;
-        height: 100%;
+      //  width: 100%;
+       // height: 100%;
       }
       .flex-column {
         display: flex;
