--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -66,6 +66,7 @@ html, body {
   min-height: 800px;
   height: 100vh;
   position: relative;
+
   .menu {
     padding-top: 40px;
 
@@ -97,7 +98,14 @@ html, body {
     }
 
   }
-
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 999;
+    padding-bottom: 25px;
+  }
 }
 
 main {
@@ -149,18 +157,17 @@ main {
 
       }
       img {
-      //  width: 100%;
-       // height: 100%;
+        //  width: 100%;
+        // height: 100%;
       }
       .flex-column {
         display: flex;
         flex-direction: column;
         width: 30%;
         .title-text {
+          padding: 65px;
           position: relative;
-          .title-text__icon {
-            padding-top: 65px;
-          }
+
           p {
             font-size: 18px;
             line-height: 34px;
@@ -168,9 +175,7 @@ main {
             font-family: $Lato;
             text-align: left;
             position: relative;
-            padding: 65px;
-            padding-top: 0;
-            margin-bottom: 53px;
+            padding-bottom: 53px;
             &:after {
               content: '';
               position: absolute;
@@ -241,7 +246,7 @@ main {
     width: 100%;
     display: flex;
     padding: 0;
-    .col-4 {
+    .col {
       padding: 0;
       width: -webkit-fill-available;
       max-width: 33.333333%;
@@ -296,6 +301,8 @@ main {
     justify-content: center;
     min-height: 200px;
     background: #282f35;
+    display: flex;
+    flex-direction: column;
     &__button {
       letter-spacing: 4.5px;
       font-size: 14px;
@@ -321,8 +328,8 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 110px;
-    .contact-with-us__input {
-      padding-top: 40px;
+    .contact-with-us__input-section {
+      margin-top: 40px;
       input {
         padding: 25px;
         width: 350px;
@@ -365,25 +372,31 @@ footer {
     }
   }
   .social-icon {
-    a {
-      display: inline-block;
+    display: flex;
+    div {
       padding-right: 15px;
-      img:hover{
-        opacity: .5;
-        transition: all 400ms ease;
+      a {
+        img:hover {
+          opacity: .5;
+          transition: all 400ms ease;
+        }
       }
       &:last-child {
         padding: 0;
       }
     }
+
   }
   .author {
     display: flex;
+    align-items: center;
     p {
       color: #848789;
+      margin-right: 10px;
     }
-    svg {
-      padding: 10px;
+    img {
+      width: 100%;
+      height: max-content;
     }
   }
 }
@@ -400,7 +413,7 @@ footer {
     }
     .gallery {
       display: flex;
-      .col-4 {
+      .col {
         width: -webkit-fill-available;
         max-width: 33.333333%;
       }
@@ -414,6 +427,7 @@ footer {
       overflow: hidden;
       .flex-column {
         .title-text {
+
           p {
             padding: 45px !important;
           }
@@ -443,21 +457,21 @@ footer {
     }
   }
   footer {
-      display: flex;
-      flex-direction: column;
-      &__item {
-        margin-bottom: 30px;
-        &:last-child {
-          margin-bottom: 0;
-          display: flex;
-          justify-content: space-around;
-        }
-      }
-      .social-icon {
+    display: flex;
+    flex-direction: column;
+    &__item {
+      margin-bottom: 30px;
+      &:last-child {
+        margin-bottom: 0;
         display: flex;
         justify-content: space-around;
       }
     }
+    .social-icon {
+      display: flex;
+      justify-content: space-around;
+    }
+  }
 }
 
 @media screen and (min-width: 600px) {
@@ -475,28 +489,33 @@ footer {
 }
 
 @media screen and(max-width: 600px) {
-  .menu__mobile {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: #fff;
+  .main-screen {
+    .menu {
+      padding-top: 0;
+    }
+    .menu__mobile {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      background-color: #fff;
 
-    .menu__item {
-      padding: 34px;
+      .menu__item {
+        padding: 34px;
+      }
+      svg {
+        display: none;
+      }
     }
-    svg {
-      display: none;
+    .main-screen__hamg-menu {
+      position: absolute;
+      top: 5%;
+      right: -20px;
+      transform: translate(-50%, -50%);
+      width: 80px;
+      height: 80px;
+      cursor: pointer;
+      z-index: 2;
     }
-  }
-  .main-screen__hamg-menu {
-    position: absolute;
-    top: 5%;
-    right: -20px;
-    transform: translate(-50%, -50%);
-    width: 80px;
-    height: 80px;
-    cursor: pointer;
-    z-index: 2;
   }
 
   .burger-nav {
